@@ -11,6 +11,7 @@ import com.epamtraining.parking.repository.BookingRepository;
 import com.epamtraining.parking.repository.SpotRepository;
 import com.epamtraining.parking.repository.UserRepository;
 import com.epamtraining.parking.services.impl.SpotServiceImpl;
+import org.apache.catalina.User;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -19,11 +20,9 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import javax.validation.constraints.AssertTrue;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -41,14 +40,14 @@ public class SpotServiceImplTest {
     SpotServiceImpl spotService;
     @Captor
     ArgumentCaptor<SpotEntity> spotEntityCaptor;
-    @Captor
-    ArgumentCaptor<BookingEntity> bookingEntityArgumentCaptor;
 
     @Test
     public void getAllSpotsTest() {
-        when(spotRepository.findAll()).thenReturn(Collections.emptyList());
-        verify(userRepository, times(1)).findAll();
-        assertEquals(Collections.emptyList(), spotService.getAll());
+        SpotEntity spot1 = new SpotEntity().setLocation("200");
+        SpotEntity spot2 = new SpotEntity().setLocation("201");
+        List<SpotEntity> spots = new ArrayList<>(Arrays.asList(spot1,spot2));
+        when(spotRepository.findAll()).thenReturn(spots);
+        assertEquals(spots, spotService.getAll());
     }
 
     @Test
@@ -75,34 +74,71 @@ public class SpotServiceImplTest {
 
     @Test
     public void getFreeSpotsForTimePeriodTest() {
-        //TODO какие проверки?!
         LocalDateTime from = LocalDateTime.now();
-        LocalDateTime to = LocalDateTime.now().plusMinutes(30);
-        when(spotRepository.findAll()).thenReturn(List.of(new SpotEntity()));
-        when(bookingRepository.findAll()).thenReturn(List.of(new BookingEntity().setBookingTo(LocalDateTime.now()).setBookingFrom(LocalDateTime.now().plusMinutes(30))));
-        spotService.getFreeSpotsForTimePeriod(from, to);
+        LocalDateTime to = LocalDateTime.now().plusMinutes(40);
+        SpotEntity spot1 = new SpotEntity().setLocation("200");
+        SpotEntity spot2 = new SpotEntity().setLocation("201");
+        SpotEntity spot3 = new SpotEntity().setLocation("202");
+        SpotEntity spot4 = new SpotEntity().setLocation("203");
+        List<SpotEntity> spots = new ArrayList<>(Arrays.asList(spot1,spot2,spot3,spot4));
+        BookingEntity booking1 = new BookingEntity()
+                .setSpotEntity(spot1)
+                .setBookingFrom(LocalDateTime.now().plusMinutes(10))
+                .setBookingTo(LocalDateTime.now().plusMinutes(20));
+        BookingEntity booking2 = new BookingEntity()
+                .setSpotEntity(spot2)
+                .setBookingFrom(LocalDateTime.now().plusMinutes(20))
+                .setBookingTo(LocalDateTime.now().plusMinutes(30));
+        List<BookingEntity> bookings = new ArrayList<>(Arrays.asList(booking1,booking2));
+
+        when(spotRepository.findAll()).thenReturn(spots);
+        when(bookingRepository.findAll()).thenReturn(bookings);
+
+        List<SpotEntity> freeSpotsForTimePeriod = spotService.getFreeSpotsForTimePeriod(from, to);
+
         verify(spotRepository, times(1)).findAll();
         verify(bookingRepository, times(1)).findAll();
+
+        assertEquals(spot3,freeSpotsForTimePeriod.get(0));
+        assertEquals(spot4,freeSpotsForTimePeriod.get(1));
+        assertEquals(2,freeSpotsForTimePeriod.size());
+
     }
 
 
 
     @Test
     public void getAllBookedSpotsTest() {
+        BookedSpot bookedSpot = new BookedSpot();
+        UserEntity user1 = new UserEntity().setId(1L).setEmail("100");
+
+        CarEntity car1 = new CarEntity()
+                .setUser(user1);
+
         LocalDateTime from = LocalDateTime.now();
-        LocalDateTime to = LocalDateTime.now().plusMinutes(30);
-        BookingEntity entity = mock(BookingEntity.class);
-        entity.getCarEntity()
-                .setNumber("M000")
-                .setUser(new UserEntity().setId(0L));
-        List<BookingEntity> bookings = new ArrayList<>();
-        bookings.add(entity);
+        LocalDateTime to = LocalDateTime.now().plusMinutes(40);
+        SpotEntity spot1 = new SpotEntity().setLocation("200");
+        SpotEntity spot2 = new SpotEntity().setLocation("201");
+        SpotEntity spot3 = new SpotEntity().setLocation("202");
+        SpotEntity spot4 = new SpotEntity().setLocation("203");
+        List<SpotEntity> spots = new ArrayList<>(Arrays.asList(spot1,spot2,spot3,spot4));
+        BookingEntity booking1 = new BookingEntity()
+                .setSpotEntity(spot1)
+                .setBookingFrom(LocalDateTime.now().plusMinutes(10))
+                .setBookingTo(LocalDateTime.now().plusMinutes(20))
+                .setCarEntity(car1);
+
+        List<BookingEntity> bookings = new ArrayList<>(Arrays.asList(booking1));
 
         when(bookingRepository.findAll()).thenReturn(bookings);
-        when(userRepository.findById(bookings.stream().findFirst().get().getCarEntity().getUser().getId())).thenReturn(Optional.of(new UserEntity()));
-        spotService.getAllBookedSpots(from,to);
+        when(userRepository.findById(anyLong())).thenReturn(Optional.of(user1));
+//        when(userRepository.findById(booking2.getCarEntity().getUser().getId())).thenReturn(Optional.of(user2));
+        List<BookedSpot> allBookedSpots = spotService.getAllBookedSpots(from, to);
         verify(bookingRepository,times(1)).findAll();
-        verify(userRepository,times(1)).findById(0l);
+        verify(userRepository,times(1)).findById(any());
+
+        assertEquals(1,allBookedSpots.size());
+        assertEquals("200",allBookedSpots.get(0).getSpotLocation());
 
 
     }
